<resources>
    <string name="app_name">Personal Assistant</string>
    <string name="start">Let\'s start</string>
    <string name="today">Today</string>
    <string name="all_task">All task</string>
    <string name="all_note">All note</string>
    <string name="assistant">Assistant</string>
    <string name="critical">Critical</string>
    <string name="important">Important</string>
    <string name="low_priority">Low priority</string>
    <string name="profile">Profile</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="save">SAVE</string>
    <string name="add">ADD</string>
    <string name="note">Note</string>
    <string name="please_enter_the_date">Please enter the date</string>
    <string name="please_enter_the_month">Please enter the month</string>
    <string name="please_enter_the_year">Please enter the year</string>
    <string name="please_enter_your_note">Please enter your note</string>
    <string name="description">Description</string>
    <string name="task">Enter your task here</string>
    <string name="choose">Choose priority</string>
    <string name="detail">Detail</string>
    <string name="setDatePicker">Set date picker</string>
</resources>