<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_today">

    <fragment
        android:id="@+id/navigation_today"
        android:name="club.mobile.d21.personalassistant.ui.today.TodayFragment"
        android:label="@string/today"
        tools:layout="@layout/fragment_today" />
    <fragment
        android:id="@+id/navigation_task"
        android:name="club.mobile.d21.personalassistant.ui.all_task.AllTaskFragment"
        android:label="@string/all_task"
        tools:layout="@layout/fragment_all_task" />
    <fragment
        android:id="@+id/navigation_note"
        android:name="club.mobile.d21.personalassistant.ui.all_note.AllNoteFragment"
        android:label="@string/all_note"
        tools:layout="@layout/fragment_all_note" />
    <fragment
        android:id="@+id/navigation_alarm"
        android:name="club.mobile.d21.personalassistant.ui.alarm.AlarmFragment"
        android:label="@string/alarm"
        tools:layout="@layout/fragment_alarm"/>
    <fragment
        android:id="@+id/navigation_profile"
        android:name="club.mobile.d21.personalassistant.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>
</navigation>